@@ -1,2 +1,3 @@
 #+roam_key: https://www.orgroam.com/
 #+roam_key: cite:orgroam2020
+#+roam_key: plain-key
